fix(table): fix table scrollbar style (#1512)
* fix(table): fix table scrollbar style

* docs(dropdown): fix style of stories

--- a/src/table/style/index.less
+++ b/src/table/style/index.less
@@ -25,6 +25,11 @@
     }
   }
 
+  &-body {
+    overflow: auto !important;
+    .scrollbar(auto);
+  }
+
   &-fixed-header &-container > &-body > table {
     border-style: hidden;
     box-shadow: unset;
